--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
   <title>Document</title>
 </head>
 <body>
+  <div class="container">
   <h1>TandemNotas</h1>
-  <label for="date">Introduce una fecha de ingreso </label>
+  <div class="nota" id="nota" contenditable="true">Edita la nota
+</div>
+<button id="add-nota">Añadir nota</button>
+<button id="clean-notas">Limpiar notas</button>
+<div id="display-notas">
+  <div class='no-nota'>
+    <span>No tienes notas guardadas</span>
+  </div>
+</div>
+</div>
+
+<label for="date">Introduce una fecha de ingreso </label>
   <label for="name">Introduce tu nombre</label>
   <script src="main.js"></script>
   
